src/tests/cases/snapshots/excise__tests__cases__ui__move_down_and_enter_folder-4.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/move_down_and_enter_folder/subfolder1  ◆ COMPLETE                                                                                                                  
 allocated ##.#K   reclaim ##.#K   apparent 20.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤│Select an entry for identity,     │
││                                                                                                                                                       ││bounds, state, and actions.       │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                         file3                                                                         ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                      8.0K (100%)                                                                      ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
└┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
