src/tests/cases/snapshots/excise__tests__cases__ui__move_down_and_enter_folder.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/move_down_and_enter_folder  ◆ COMPLETE                                                                                                                             
 allocated ##.#K   reclaim ##.#K   apparent 20.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────┤│Select an entry for identity,     │
││                                                                                                                         │                             ││bounds, state, and actions.       │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                          file2                                                          │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                       8.0K (40%)                                                        │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │            file1            ││                                  │
││                                                                                                                         │                             ││                                  │
│├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                             ││                                  │
││                                                                                                                         │         4.0K (20%)          ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                              subfolder1/ (+1 descendants)                                               │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                       8.0K (40%)                                                        │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
└┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
